--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -30,6 +30,8 @@ security:
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
+    
+    hide_user_not_found: false  
 
 when@test:
     security:
