--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -17,8 +17,15 @@ security:
         main:
             lazy: true
             provider: app_user_provider
-            custom_authenticator: App\Security\LoginFormAuthenticator
+            custom_authenticator:
+                - App\Security\LoginFormAuthenticator
+                - App\Security\DummyAuthenticator
             logout: true  
+
+            remember_me:  
+                secret: '%kernel.secret%' 
+                # always_remember_me: true 
+                signature_properties: [password] 
 
 
             # activate different ways to authenticate
@@ -30,7 +37,7 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
     
     hide_user_not_found: false  
