working with builtin form_login from Symfony

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -18,14 +18,26 @@ security:
             lazy: true
             provider: app_user_provider
             custom_authenticator:
-                - App\Security\LoginFormAuthenticator
+                # - App\Security\LoginFormAuthenticator
                 - App\Security\DummyAuthenticator
             logout: true  
 
             remember_me:  
                 secret: '%kernel.secret%' 
                 # always_remember_me: true 
-                signature_properties: [password] 
+                signature_properties: [password]  
+
+            # entry_point: form_login 
+
+
+            form_login: 
+                login_path: app_login 
+                check_path: app_login 
+                username_parameter: email 
+                password_parameter: password 
+                enable_csrf: true 
+
+                
 
 
             # activate different ways to authenticate
