--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -18,7 +18,7 @@ security:
             lazy: true
             provider: app_user_provider
             custom_authenticator:
-                # - App\Security\LoginFormAuthenticator
+                - App\Security\LoginFormAuthenticator
                 - App\Security\DummyAuthenticator
             logout: true  
 
@@ -30,12 +30,12 @@ security:
             # entry_point: form_login 
 
 
-            form_login: 
-                login_path: app_login 
-                check_path: app_login 
-                username_parameter: email 
-                password_parameter: password 
-                enable_csrf: true 
+            # form_login: 
+            #     login_path: app_login 
+            #     check_path: app_login 
+            #     username_parameter: email 
+            #     password_parameter: password 
+            #     enable_csrf: true 
 
                 
 
