--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "knplabs/knp-time-bundle": "^1.11",
         "pagerfanta/doctrine-orm-adapter": "^3.3",
         "pagerfanta/twig": "^3.3",
+        "phpdocumentor/reflection-docblock": "^5.6",
         "sensio/framework-extra-bundle": "^6.0",
         "stof/doctrine-extensions-bundle": "^1.4",
         "symfony/asset": "5.3.*",
@@ -22,8 +23,11 @@
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.3.*",
         "symfony/monolog-bundle": "^3.0",
+        "symfony/property-access": "5.3.*",
+        "symfony/property-info": "5.3.*",
         "symfony/runtime": "5.3.*",
         "symfony/security-bundle": "5.3.*",
+        "symfony/serializer": "5.3.*",
         "symfony/stopwatch": "5.3.*",
         "symfony/twig-bundle": "5.3.*",
         "symfony/ux-chartjs": "^1.3",
