--- a/.env
+++ b/.env
@@ -26,3 +26,9 @@ APP_SECRET=c28f3d37eba278748f3c0427b313e86a
 #DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7
 DATABASE_URL=mysql://root:1234567890@127.0.0.1:3306/db_name?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/lock ###
+# Choose one of the stores below
+# postgresql+advisory://db_user:db_password@localhost/db_name
+LOCK_DSN=flock
+###< symfony/lock ###
