--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -48,7 +48,9 @@ security:
             #     password_parameter: password 
             #     enable_csrf: true 
 
-                
+            two_factor: 
+                auth_form_path: 2fa_login 
+                check_path: 2fa_login_check    
 
 
             # activate different ways to authenticate
